fx marquee gap bug

--- a/tt-styling.css
+++ b/tt-styling.css
@@ -355,8 +355,8 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     to {
-        transform: translateX(-100%);
-        /* match 1 rem to gap above */
+        translateX(calc(-100% - 2rem))
+        /* match 2 rem to gap above */
     }
 }
 
